# property-finder

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: discovery-notes.md  personas.md  prd.md  property-finder-brief.md  success-metrics.md  user-stories.md
docs/runs/: shortlist-runs.md
scripts/: run_shortlist.py
src/property_finder/: config.py  main.py
src/property_finder/agents/: area_agent.py  commute_agent.py  orchestrator.py  sentiment_agent.py
src/property_finder/application/: container.py
src/property_finder/domain/: models.py
src/property_finder/infrastructure/: gemini_listings.py  gemini_llm.py  gemini_reviews.py  google_maps.py  hazards.py  places.py  stubs.py
src/property_finder/tools/: __init__.py
tests/: test_agents.py  test_container.py  test_gemini_llm.py  test_gemini_reviews.py  test_google_maps_provider.py  test_hazards.py  test_health.py  test_listings.py  test_places_adapter.py  test_ranking.py  test_shortlist_endpoint.py  test_validation.py
